Add docker compose for service and database

--- a/TransactionService/appsettings.json
+++ b/TransactionService/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "Database": {
-    "ConnectionString": ""
+    "ConnectionString": "Data source=sqlserver;Database=carrefourDb;Trusted_Connection=false;MultipleActiveResultSets=true;User ID=sa;Password=P@ssword!!;Encrypt=False"
   }
 }
